# mai-gram

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  OPINION_AND_RECOMMENDATIONS.md  PROJECT_PHILOSOPHY.md  PROJECT_VISION.md  README.md  deploy.env.example  docker-compose.yml  messages.jsonl  pyproject.toml
.cursor/commands/: coverage.md  fiil-all-gaps.md  fixing-programmer.md  good-commit.md  implement-plan.md  inspect.md  use-only-english.md
.cursor/plans/: console_messenger_and_functional_testing_8cf820a9.plan.md  mai_companion_plan_bce23cce.plan.md  phase_3_personality_system_a4a369e0.plan.md  phase_5_memory_(revised)_04f7b22f.plan.md  phase_5_testing_blocks_2649f144.plan.md  streaming_layout_flip_postmortem.md
.cursor/rules/: find-the-plan.mdc  greetings.mdc  manual-e2e-testing.mdc  resoning-paragraphs.mdc  terminology.mdc  test-companions-only.mdc
.github/: copilot-instructions.md
config/: bots.toml.example  models.toml
data/: .console_state.json
data/debug_logs/demo-companion/: 2026-01-01.jsonl
docs/: ARCHITECTURE.md  COMPANION_CONTRACT_TEMPLATE.md  CONFIGURATION.md  DEBUGGING.md  DEVELOPMENT.md  GETTING_STARTED.md  MEMORY.md  PERSONALITY.md  README.md  TERMINOLOGY.md  deploy.md
plans/: code-quality-refactoring-plan.md  integration-testing.md
prompts/: coder.toml  coder.txt  creative.toml  creative.txt  default.toml  default.txt  english-teacher.txt  independent.toml  independent.txt  therapist.txt
scripts/: check_code_limits.py  deploy.sh  pre-commit
src/mai_companion/: __init__.py  __main__.py  clock.py  config.py  console_runner.py  main.py
src/mai_companion/activities/: __init__.py
src/mai_companion/avatar/: __init__.py
src/mai_companion/bot/: __init__.py  handler.py  middleware.py  onboarding.py
src/mai_companion/core/: __init__.py  prompt_builder.py
src/mai_companion/db/: __init__.py  database.py  migrations.py  models.py
src/mai_companion/debug/: __init__.py  cost_tracker.py  llm_logger.py
src/mai_companion/llm/: __init__.py  openrouter.py  provider.py  translation.py
src/mai_companion/mcp_servers/: __init__.py  bridge.py  manager.py  messages_server.py  sleep_server.py  wiki_server.py
src/mai_companion/memory/: __init__.py  forgetting.py  knowledge_base.py  manager.py  messages.py  summaries.py  summarizer.py
src/mai_companion/messenger/: __init__.py  base.py  console.py  telegram.py
src/mai_companion/personality/: __init__.py  character.py  mood.py  temperature.py  traits.py
src/mai_companion/relationship/: __init__.py
src/mai_companion/scheduler/: __init__.py
src/mai_gram/: __init__.py  __main__.py  config.py  config_loaders.py  console_cli.py  console_inspection.py  console_output.py  console_runner.py  main.py
src/mai_gram/bot/: __init__.py  access_control.py  assistant_turn_builder.py  callback_router.py  chat_settings_handlers.py  conversation_executor.py  custom_model.py  (+20 more)
tests/: conftest.py  test_clock.py  test_config.py  test_config_loaders.py  test_console_cli.py  test_console_output.py  test_console_runner.py  test_console_runner_replay.py  test_main.py
tests/functional/: __init__.py  conftest.py  functional_config.toml  test_cli_helpers.py  test_cli_smoke.py  test_command_flows.py  test_conversation.py  test_format_repair.py  test_full_lifecycle.py  test_import_and_replay.py  test_llm_error_delivery.py  test_message_search.py  test_natural_forgetting.py  test_natural_summarization.py  test_onboarding.py  test_prompt_and_visibility.py  test_prompt_inspection.py  test_reset_and_regenerate.py  test_response_templates.py  test_sleep_multi_message.py  test_stuck_setup_session.py  test_template_streaming.py  test_tool_call_summarization.py  test_tools_and_wiki.py  test_vision.py  test_wiki_memory.py
tests/test_bot/: __init__.py  test_access_control.py  test_assistant_turn_builder.py  test_callback_router.py  test_conversation_executor.py  test_conversation_service.py  test_custom_model.py  test_handler.py  test_history_actions.py  test_import_workflow.py  test_mcp_manager_factory.py  test_middleware.py  test_onboarding.py  test_regenerate_service.py  test_resend_service.py  test_reset_backup.py  test_response_renderer.py  test_setup_workflow.py
tests/test_core/: test_adapter_runtime.py  test_chat_inspection_service.py  test_import_chat_service.py  test_importer.py  test_md_to_telegram.py  test_prompt_builder.py  test_prompt_preview_service.py  test_replay.py
tests/test_db/: test_companion_model_binding.py  test_database.py  test_migrations.py  test_models.py
tests/test_debug/: test_cost_tracker.py  test_llm_logger.py
tests/test_integration/: conftest.py  test_llm_error_delivery.py  test_streaming_layout_flip.py  test_stuck_setup_session.py  test_template_streaming.py
tests/test_llm/: __init__.py  test_openrouter.py  test_openrouter_support.py  test_provider.py  test_translation.py
tests/test_mcp/: __init__.py  test_bridge.py  test_external.py  test_manager.py  test_messages_server.py  test_sleep_server.py  test_wiki_server.py
tests/test_memory/: test_forgetting.py  test_knowledge_base.py  test_manager.py  test_messages.py  test_summaries.py  test_summarizer.py  test_summary_versioning.py
tests/test_messenger/: __init__.py  test_base.py  test_console.py  test_telegram.py
tests/test_personality/: __init__.py  test_character.py  test_mood.py  test_temperature.py  test_traits.py
tests/test_response_templates/: test_parse_streaming.py  test_templates.py
tests/test_scripts/: test_check_code_limits.py
(+75 files in other folders)
