[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mai-companion"
version = "0.1.0"
description = "A self-hosted AI companion that lives on your server and communicates through Telegram like a real friend."
readme = "PROJECT_PHILOSOPHY.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.0",
    "apscheduler>=3.10",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[project.scripts]
mai-chat = "mai_companion.console_runner:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
