[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mai-gram"
version = "0.1.0"
description = "Lightweight Telegram-to-LLM bridge via OpenRouter with multi-bot support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "watchfiles>=1.0.0",
]

[project.scripts]
mai-chat = "mai_gram.console_runner:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mai_gram"]
omit = [
    "src/mai_gram/__main__.py",
    "src/mai_gram/main.py",
    "src/mai_gram/console_runner.py",
    "src/mai_gram/messenger/telegram.py",
    "src/mai_gram/bot/handler.py",
    "src/mai_gram/core/md_to_telegram.py",
    "src/mai_gram/core/prompt_builder.py",
    "src/mai_gram/mcp_servers/bridge.py",
    "src/mai_gram/mcp_servers/external.py",
    "src/mai_gram/debug/*",
    "src/mai_gram/memory/forgetting.py",
    "src/mai_gram/memory/summarizer.py",
    "src/mai_gram/memory/summaries.py",
    "src/mai_gram/db/migrations.py",
    "src/mai_gram/config.py",
    "src/mai_gram/messenger/console.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
strict = true
